--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HackDS</title>
+	<title>Կոմիտաս</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 	<div class="cont">
 		<header>
-			<h1>Hello world</h1>
+			<div class="voghjuyn">
+				<h1>Կոմիտաս</h1>
+				<p>
+					Կոմիտաս օր մը ինծի ըսավ. «Հայկական 50 հատ խազ կա: Ես կկարծեմ, որ հայոց ձայնանիշը քանի մը ձայն կպարունակե իր մեջ» և ուրախությամբ վրա բերավ. «Ես գաղտնիքը գտեր եմ...»:
+				</p>
+			</div>
+			<div id="menu">
+				<ul>
+					<li id="home">Home</li>
+					<li id="kyanq">Կյանք</li>
+					<li>Երգեր</li>
+					<li>Մտքեր</li>
+					<li>Նկարներ</li>
+				</ul>
+			</div>
 		</header>
-		<h1>Զարմացրու եթե կարող ես</h1>
-		<form method="POST" action="/" enctype="application/x-www-form-urlencoded | multipart/form-data | text/plain">
-			<h1>Գրիր այստեղ ինչ ես ուզում և քո ցանկությունը մի օր անպայման կկատարվի</h1>
-			<center>
-				<textarea name="text"></textarea><br><br>
-				<input type="submit" name="btn">
-			</center>
-		</form>
+		<div class="kyanq">
+			<h1>Կյանք</h1>
+			<img src="image/kyanq.jpg">
+			<p>
+				Կոմիտաս (Սողոմոն Գևորգի Սողոմոնյան, սեպտեմբեր 26, 1869, Քյոթահիա - հոկտեմբեր 22, 1935, Փարիզ), հայ երգահան, երգիչ, երաժշտական էթնոլոգ, երաժշտագետ, վարդապետ և ուսուցիչ, բանահավաք, խմբավար, մանկավարժ, հայկական ազգային կոմպոզիտորական դպրոցի հիմնադիր:1881-1893 թթ. սովորել է Էջմիածնի Գևորգյան ճեմարանում: 1894 թ. ձեռնադրվել է աբեղա և ստացել Կոմիտաս անունը։ 1895 թ. Կոմիտասին շնորհվել է վարդապետի հոգևոր աստիճան։ 1895-96 թթ. Թիֆլիսում կոմպոզիտոր Մակար Եկմալյանի ղեկավարությամբ ուսումնասիրել է երաժշտական տեսական առարկաներ, որից հետո՝ 1896-1899 թթ., ուսումը շարունակել է Բեռլինի Ֆրիդրիխ Վիլհելմ արքունի համալսարանում (ներկայումս Հումբոլդտ համալսարան) և Ռիչարդ Շմիդտի մասնավոր կոնսերվատորիայում:
+
+				Կոմիտասի գիտական և ստեղծագործական գործունեությունը նոր էջ բացեց հայ երաժշտական մշակույթի պատմության մեջ: Հայ հոգևոր և ժողովրդական երաժշտությանը վերաբերող իր գիտական ուսումնասիրությունները Կոմիտասը ներկայացրել է Եվրոպայի մի շարք քաղաքներում (Բեռլին, Փարիզ, Ժնև, Լոզան և այլն), այդ թվում` Միջազգային երաժշտական ընկերության համաժողովներին, որի հիմնադիր անդամներից էր: Կոմիտաս-գիտնականը նպատակ ուներ աշխարհին ներկայացնել հայկական երաժշտական հարուստ մշակույթի ավանդույթները և ապացուցել, որ «հայն ունի ինքնուրույն երաժշտություն»:
+
+				Կոմիտասի ստեղծագործական ոճը յուրահատուկ է իր տեսակի մեջ: Հիմնվելով հայ ավանդական երաժշտական մշակույթի առանձնահատկությունների վրա՝ նա հայտնաբերեց հարմոնիայի և պոլիֆոնիայի կիրառման նոր և հարուստ հնարավորություններ, որոնք պատշաճ էին հայ երաժշտական մտածողությանը: Նրա երաժշտական ժառանգությունն ընդգրկում է վոկալ («Անտունի», «Կռունկ», «Ծիրանի ծառ», «Ալ այլուղս», «Զինչ ու զինչ» և այլն), խմբերգային՝ ժողովրդական և հոգևոր («Անձրևն եկավ», «Լուսնակն անուշ», «Գութաներգ», «Հայր մեր», «Ով զարմանալի», «Այսօր ձայնն հայրական», «Էջ Միածինն ի Հօրէ», «Տէր, ողորմեա» և այն), և դաշնամուրային («Յոթ պար», «Մշո շորոր» և այլն) ժանրի ստեղծագործություններ: Կոմիտասի ստեղծագործության մեջ առանձնակի կարևորություն է ներկայացնում իր միակ ավարտուն մեծակտավ գործը՝ «Պատարագ»-ը արական կազմի համար: Կոմիտասն ունեցել է նաև օպերա ստեղծելու մի քանի մտահղացումներ, որոնք մնացել են անկատար:
+			</p>
+		</div>
+		<div class="kyanq">
+			<h1>Երգեր</h1>
+			<h1>Չինար ես</h1>
+		</div>
 		<footer>
-			CC
+			
 		</footer>	
 	</div>
 </body>
