--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,13 @@
 				<ul>
 					<li id="home">Home</li>
 					<li id="kyanq">Կյանք</li>
-					<li>Երգեր</li>
-					<li>Մտքեր</li>
-					<li>Նկարներ</li>
+					<li id="erger">Երգեր</li>
+					<li id="mtqer">Մտքեր</li>
+					<li id="nkarner">Նկարներ</li>
 				</ul>
 			</div>
 		</header>
-		<div class="kyanq">
+		<div class="kyanq k">
 			<h1>Կյանք</h1>
 			<img src="image/kyanq.jpg">
 			<p>
@@ -37,13 +37,122 @@
 				Կոմիտասի ստեղծագործական ոճը յուրահատուկ է իր տեսակի մեջ: Հիմնվելով հայ ավանդական երաժշտական մշակույթի առանձնահատկությունների վրա՝ նա հայտնաբերեց հարմոնիայի և պոլիֆոնիայի կիրառման նոր և հարուստ հնարավորություններ, որոնք պատշաճ էին հայ երաժշտական մտածողությանը: Նրա երաժշտական ժառանգությունն ընդգրկում է վոկալ («Անտունի», «Կռունկ», «Ծիրանի ծառ», «Ալ այլուղս», «Զինչ ու զինչ» և այլն), խմբերգային՝ ժողովրդական և հոգևոր («Անձրևն եկավ», «Լուսնակն անուշ», «Գութաներգ», «Հայր մեր», «Ով զարմանալի», «Այսօր ձայնն հայրական», «Էջ Միածինն ի Հօրէ», «Տէր, ողորմեա» և այն), և դաշնամուրային («Յոթ պար», «Մշո շորոր» և այլն) ժանրի ստեղծագործություններ: Կոմիտասի ստեղծագործության մեջ առանձնակի կարևորություն է ներկայացնում իր միակ ավարտուն մեծակտավ գործը՝ «Պատարագ»-ը արական կազմի համար: Կոմիտասն ունեցել է նաև օպերա ստեղծելու մի քանի մտահղացումներ, որոնք մնացել են անկատար:
 			</p>
 		</div>
-		<div class="kyanq">
+		<div class="kyanq e">
 			<h1>Երգեր</h1>
-			<h1>Չինար ես</h1>
+			<table>
+				<tr class="menuErg" onclick="func(this)">
+					<td class="img"><img src="image/komitas.png"></td>
+					<td>Ծիրանի ծառ</td>
+					<td style="display:none;">https://www.youtube.com/embed/S-weFg0qfaU</td>
+				</tr>
+				<tr class="menuErg" onclick="func(this)">
+					<td class="img"><img src="image/komitas1.png"></td>
+					<td>Քելե - քելե</td>
+					<td style="display:none;">https://www.youtube.com/embed/cTIZm2tiIuU</td>
+				</tr>
+				<tr class="menuErg" onclick="func(this)">
+					<td class="img"><img src="image/komitas2.png"></td>
+					<td>Տեր ողորմեա</td>
+					<td style="display:none;">https://www.youtube.com/embed/-uiwNcmFPY0?list=RDcTIZm2tiIuU</td>
+				</tr>
+				<tr class="menuErg" onclick="func(this)">
+					<td class="img"><img src="image/komitas4.png"></td>
+					<td>Գարուն</td>
+					<td style="display:none;">https://www.youtube.com/embed/_49HwFv-WG4?list=RDcTIZm2tiIuU</td>
+				</tr>
+				<tr class="menuErg" onclick="func(this)">
+					<td class="img"><img src="image/komitas3.png"></td>
+					<td>Ես սարէն կու գայի</td>
+					<td style="display:none;">https://www.youtube.com/embed/RFBGAMGwL_M?list=RDcTIZm2tiIuU</td>
+				</tr>
+			</table>
+		</div>
+		<div class="kyanq m">
+			<h1>Ես եմ</h1>
+			<p style="text-align: center;">
+				Ես քու սերն եմ,<br>
+				Սիրուդ ջերն եմ,<br>
+				Մենավոր. <br>
+				<br>
+				Ես եմ քո կին,<br>
+				Դու՝ իմ հոգին <br>
+				Հենավոր։ <br>
+				<br>
+				Ձայնդ հնչեց սիրո կայծակ շեշտակի,<br>
+				Հոգիս շնչեց գարուն-փայլակ հեշտակի։ <br>
+				<br>
+				Շունչդ առա կուռ ծոցերով՝ <br>
+				Գրիչ դառա հուր բոցերով։ <br>
+				<br>
+				Ես բանաստեղծության մեջ զգում եմ սեր, ուրախություն։ <br>
+				<br>
+				Ի՞նչ մտքեր ծնվեցին բանաստեղծությունը կարդալիս: <br>
+				<br>
+				Ինձ շատ դուր եկավ առաջին տունը` <br>
+				<br>
+				Ես քու սերն եմ, <br>
+				Սիրուդ ջերն եմ,	<br>
+				Մենավոր. <br>
+				<br>
+				Ինչպե՞ս կվերնագրեիր բանաստեղծությունը: <br>
+				<br>
+				Կոմիտասի սերը
+			</p>
+			<hr>
+			<h1>ԱՇՈՒՆ ԿՅԱՆՔ</h1>
+			<p style="text-align: center;">
+				Աչքի առաջ,<br>
+				Հառաչ-հառաչ,<br>
+				Խորհրդավոր տերևներ,<br>
+				Բունեն ընկած կեղևներ,<br>
+				Հողի վրա,<br>
+				Դեղին հուսով <br>
+				Կողի վրա։ <br>
+				<br>
+				Լուռ, անտերունչ, <br>
+				Խուլ, անմռունչ՝ <br>
+				Չորով-փորով կեռ ծառեր, <br>
+				Ծռով-փռով լեռ քարեր, <br>
+				Եվ հենավոր՝ <br>
+				Սարի կողին, <br>
+				Ե՛վ մենավ <br>
+ 				<br>
+				Ես զգում եմ աշունը,  տեսնում եմ այս բանաստեղծությունը և պատկերացնում եմ իսկական  աշունը: <br>
+				Այս բանաստեղծությունը կարդալիս սկսեցի մտածել, որ աշունն այնքան էլ վատը չէ, ես բակ  իջնում եմ ձմռանը և գարնանը, բայց հիմա ուզում եմ իջնել նաև աշնանը: <br>
+			</p>
+			<hr>
+			<h1>ՆՈՃԻՆԵՐՆ ՈՒ ՄԱՅՐԻՆԵՐ</h1>
+			<p style="text-align: center;">
+				Մուգ նոճիներ միգապար՝ <br>
+				Ճամփի վերև սիգապար՝ <br>
+				Դեպի երկինք հրազայր, <br>
+				Կանաչ հուսով սրածայր, <br>
+				Ճյուղերն ի վեր կոնավոր՝ <br>
+				Կարծես լինին տոնավոր։ <br>
+ 				<br>
+				Կուսատերեւ մայրիներ՝ <br>
+				Հուսաբեղուն այրիներ, <br>
+				Փշերն աչքին պիշելով՝ <br>
+				Արև օրեր հիշելով, <br>
+				Քարերի ծոց պատառել <br>
+				Ամպերի գոգ կատարել։ <br>
+			</p>
+			<hr>
+		</div>
+		<div class="kyanq n">
+			<h1>Նկարներ</h1>
+			<img src="">
 		</div>
 		<footer>
 			
 		</footer>	
+	</div>
+	<div class="pup">
+		<div class="window">
+			<center>
+				<iframe src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			</center>
+		</div>
 	</div>
 </body>
 </html>
