--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
@@ -141,7 +142,40 @@
 		</div>
 		<div class="kyanq n">
 			<h1>Նկարներ</h1>
-			<img src="">
+			
+			<center>
+				<img onclick="op(this)" src="image/galereya/42636_b.jpg">
+
+				<img onclick="op(this)" src="image/galereya/42640_b.jpg">
+
+				<img onclick="op(this)" src="image/galereya/88687_b.jpg">
+
+				<img onclick="op(this)" src="image/galereya/b1e598dad568852aabd565fbb85cbd0e--dance-movies-armenia.jpg">
+
+				<img onclick="op(this)" src="image/galereya/f37b17a14caea76370c14a51af534229--armenia.jpg">
+
+				<img onclick="op(this)" src="image/galereya/image.jpeg">
+
+				<img onclick="op(this)" src="image/galereya/image (1).jpeg">
+
+				<img onclick="op(this)" src="image/galereya/image (2).jpeg">
+
+				<img onclick="op(this)" src="image/galereya/image (3).jpeg">
+
+				<img onclick="op(this)" src="image/galereya/image (4).jpeg">
+
+				<img onclick="op(this)" src="image/galereya/image (5).jpeg">
+
+				<img onclick="op(this)" src="image/galereya/image (6).jpeg">
+
+				<img onclick="op(this)" src="image/galereya/image (7).jpeg">
+
+				<img onclick="op(this)" src="image/galereya/image (8).jpeg">
+
+				<img onclick="op(this)" src="image/galereya/image (9).jpeg">	
+			</center>
+
+			<div class="verj"></div>
 		</div>
 		<footer>
 			
@@ -152,6 +186,17 @@
 			<center>
 				<iframe src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</center>
+		</div>
+		<div class="close" onclick="cl(this)">
+			<img src="image/img_293861.png">
+		</div>
+	</div>
+	<div class="p">
+		<div class="window">
+			<img class="imgp" src="">
+		</div>
+		<div class="close" onclick="cl(this)">
+			<img src="image/img_293861.png">
 		</div>
 	</div>
 </body>
